--- a/_posts/2024-03-04-cfr.markdown
+++ b/_posts/2024-03-04-cfr.markdown
@@ -6,6 +6,8 @@ categories: bikes
 ---
 # Tuning is not a crime: 90's carbon gone 1by
 
-![side_shot](/docs/assets/giantcfr/side_wall.jpg)
+Blog post coming soon...
 
-## Introduction
+Sneak peek:
+
+![side_shot](/docs/assets/giantcfr/cfr_detail.jpeg)
