updated blog title

--- a/_posts/2024-02-29-godeau.markdown
+++ b/_posts/2024-02-29-godeau.markdown
@@ -4,7 +4,7 @@ title:  "1980's Steel Godeau"
 date:   2024-02-29 15:24:22 +0100
 categories: bikes
 ---
-# Steel is real: 1980's Godeau restoration
+# Steel is real: restoring grandfather's 1980's steel race bike
 
 ![side_shot](/docs/assets/bluebike/side_overview.jpg)
 
