--- a/_posts/2024-03-04-cfr.markdown
+++ b/_posts/2024-03-04-cfr.markdown
@@ -10,7 +10,7 @@ categories: bikes
 
 ## Introduction and History
 
-Last year I started a course in bike maintenance on Friday evenings. After a few lessons I decided I wanted to build up a bike myself, starting from a bare frame. I really liked the idea of figuring out what components would work well together and setting up the bike completely to my liking. Within a reasonable budget of course. Although if you are looking for price/quality, this probably isn't the build you're looking for. At first I wanted to go with something really old (think 70-80's steel), but after finishing the build for my sister, I decided I wanted something more modern that was capable of taking a 11spd group without having to meddle with the frame. At first I was really keen on finding something like a Cannondale CAAD series (partly because of the beautiful builds at https://www.hojlab.com/), Giant Peloton series or a Trek, so basically some high-end alloy stuff from the 2000's. However, I was hoping to get a frame for around €100~€150 and good deals were pretty scarce.
+Last year I started a course in bike maintenance on Friday evenings. After a few lessons I decided I wanted to build up a bike myself, starting from a bare frame. I really liked the idea of figuring out what components would work well together and setting up the bike completely to my liking. Within a reasonable budget of course. Although if you are looking for price/quality, this probably isn't the build you're looking for. At first I wanted to go with something really old (think 70-80's steel), but after finishing the build for my sister, I decided I wanted something more modern that was capable of taking a 11spd group without having to meddle with the frame. At first I was really keen on finding something like a Cannondale CAAD series (partly because of the beautiful builds at [https://www.hojlab.com/](https://www.hojlab.com/)), Giant Peloton series or a Trek, so basically some high-end alloy stuff from the 2000's. However, I was hoping to get a frame for around €100~€150 and good deals were pretty scarce.
 
 Finally, I ended up with Giant CFR Pro Series. That's right, a carbon bike with aluminum lugs straight from the late 90's. History wise I couldn't find a lot about the bike, except that this was definitely one of the top level Giant frames of that time. It was probably raced by someone at some point, because the holders for a race number on the top tube seem to be used. The bike also made its appearance in the pro peloton as the bike of Team Giant – ZVVZ – AIS, being ridden by the likes of Jens Voigt! I got the frame in pretty good condition, including the accompanying aero fork and a Campagnolo headset.
 
@@ -22,17 +22,29 @@ Finally, I ended up with Giant CFR Pro Series. That's right, a carbon bike with 
 
 ### Components and concept
 
-Inspired by hipster builds and YouTube stuff (think Chris Miller, Vegan Cyclist & Dylan Johnson), I really wanted to try and go for a 1x build. Although already widely adopted in the MTB & gravel scene, 1x setups on road bikes still remain a bit controversial. On my main road bike, I also wouldn't opt quickly for a 1x setup. It probably would be good enough for 85% of my riding, but the occasional Gran Fondo or crit race do require the flexibility of having a really low and high gear. But, for this bike, which I plan to either sell or use as a back-up for my road bike riding around Ghent (usually flat with the occasional punchy climb) 1x seemed like it would do the job.
+I was inspired by hipster builds and YouTube stuff (think Chris Miller, Vegan Cyclist & Dylan Johnson) to try and go for a 1x build. Although already widely adopted in the MTB & gravel scene, 1x setups on road bikes still remain a bit controversial. On my main road bike, I also wouldn't opt quickly for a 1x setup. It probably would be good enough for 85% of my riding, but the occasional Gran Fondo or crit race do require the flexibility of having a really low and high gear. But, for this bike, which I plan to either sell or use as a back-up for my road bike riding around Ghent (usually flat with the occasional punchy climb) 1x seemed like it would do the job.
 
-There aren't that many groupsets for 1x that support drop-bar shifters and mechanical rim brakes. I also could have gone with any old 2x road groupset and convert it to 1x with a custom chainring, but that would leave me with a pretty big low gear in the back.
+There aren't that many groupsets for 1x that support drop-bar shifters and mechanical rim brakes. I also could have gone with any old 2x road groupset and convert it to 1x with a custom chainring, but that would leave me with a pretty big low gear in the back. Bikepacking.com has a [really great article](https://bikepacking.com/gear/guide-to-mullet-drivetrains/) on mullet setups (albeit a bit dated) on a budget as well, but they all remain rathe expensive, and I also didn't really need the super big MTB gear range in the back. Considering all the above, I ended up with two groupsets that had my attention: the new [MicroSHIFT Sword](https://www.microshift.com/products/groups/sword/) and [SRAM APEX 1](https://www.sram.com/en/sram/road/series/sram-apex-1?filters=&sort=Relevancy&page=1), which both provide drop bar shifters with a rear derailleur with a decent range and mechanical brakes. SRAM ended up being cheaper (at least for shifters + derailleur, if I had gone with the crankset from either SRAM or MicroSHIFT, MicroSHIFT might have been the cheaper option) and also offered the benefit of 11 speed versus 10 speed. Concerning the crankset I went with Easton EA90 and a Garbaruk 48T chainring (really fell in love with the look of those). Finally, I couldn't resist going a bit extra with a gold KMC chain and some high end Conti tires with latex Vittoria inner tubes.
+
+![crankset](/docs/assets/giantcfr/boxes_cranks.jpg)
 
 ### Building and hickups
+
+The build for this bike was pretty straightforward. The BSA bottom bracket meant I could easily install a modern Praxis BB suited for the Easton crankset. Chainline isn't 100% what it should be, but it works just fine. I also needed to install an extra adapter to go from the quill stem to a ahead stem, which I easily found in Decathlon. Only one weird issue ensued while building up this project: the rear brake caliper won't tighten in the frame. The bolts that came with the SRAM brakes fitted perfectly fine in the hole in the fork for the front caliper, which tightened just fine. However, the size of the bolts didn't fit for the rear one. Luckily, in the atelier of the school (where I go for evening class in bike mechanics) we found a bolt that after some grinding down fitted fine. Still, somewhere there is play introduced and the rear caliber moves with the slightest touch. It does re-center after braking, so it isn't a major problem and/or didn't prevent riding the bike, but nevertheless it should be fixed. It's probably something obvious that I'm missing, but neither I, nor the teacher found a solution, but it's something I'm definitely coming back to...
 
 ## The Ride
 
 ### 1x on road
 
+I never really was a believer in 1x for road. But honestly, the simplicity is admirable and front derailleurs can be nasty little cunts (looking at you GRX FD...), and also like to gather a lot of grime & make the bike generally a pain to clean.  Only having 11 gears when you really don't need any more than that is really quite fun. Especially with the SRAM shifter, this means I literally have only one lever to push. One click shifts to a smaller cog, pressing through shifts up one or more to larger cogs. This way of shifting definitely took some practice, but it works great. Compared to what I'm used to (Shimano Ultegra & GRX) the shifts are much "harsher". On the downshift, I really enjoy the loud "TACK" when going to a heavier gear. Range-wise I'm pretty happy with the 48T in combination with the 11-42 cassette. Honestly I think a 50T in front would suit my riding style with this bike even better, as I'm prone to punching over the hills and probably won't use the 48-42 gear a lot, unless I go the Ardennes (but then I'll probably reach for my TCR anyway). The 48-11 starts spinning out a bit around ~50km/h, so in the finale of club rides I won't be sprinting with this bike.
+
 ### 27 year old carbon
+
+So, how does a 27 year old frame ride compared to modern stuff? Pretty good I would say, although the difference is very much notable (luckily lol). The first thing I noticed compared to my Cinelli and TCR is the stiffness. Bike reviewers and industry throw this term around a lot, but this is actually the first time I get what it is. Going from the carbon TCR to the alloy Cinelli, I did notice some difference in "willingness to accelerate", although if you put carbon wheels under the Cinelli, it still is really responsive in its acceleration. This bike on the other hand, is not so. While still feeling nimble and aggressive (probably due to the fit with quite the amount of drop from saddle to handlebars), you can feel the flex around the bottom bracket, seatstays and chainstays when you stand on the pedals and push hard. Doesn't mean you can't go hard with it of course (managed to improve my PR on the Berendries on it) and it's only logical that I'm able to feel the progression in carbon frames between a frame from 1997 and one from 2017. Wheels probably also play a role, since it currently has a "basic" set of alloy wheels, my guess is that with some stiffer carbon ones, the "pop" will be a bit better. Other than that the bike is a joy to ride. It still is a pure-bred race bike and it begs for the rider to put its head down and push hard. The long stem and aggressive fit really makes it hard to go easy on this one. Cornering is fine, but I'm not used to having such a long stem, so I don't have the same amount of trust throwing it into a sharp corner. The combination of the latex tubes with tried and tested 25mm Conti GP5000's also really is a winner and comfort wise it rides super nice.
+
+## Conclusion
+
+All in all, I'm really happy with how this project turned out. The looks of the bike are amazing and it performs more than adequately for its age and price/quality of components. Writing this, I rode approx. 500km on it, including a longer ride of ~100km on flat terrain and one of ~80km on hills and cobbles. Total cost of the project was €864, so by no means a full budget build, as I did chose to go with the components I liked and spent some extra on the cranks, chainring, tires, etc. On the other hand, I'd argue that a new bike for under €900  is not a bad deal, especially it being really unique and the feeling of riding something that you assembled yourself is really awesome. Sure, I wouldn't use it for really fast club rides and/races, but for casual spring and summer riding, commuting, rides with my girlfriend, etc. this bike really does it job very well. It doesn't fill a functional gap in my bike collection, but hey, if everything in live needed to be functional and efficient, it would be a boring mess. I guess that sentence really sums up the sentiment of this bike, nonsensical, 1x, gold chain, carbon as old as I am, pure fun! 
 
 ## Gallery
 ![side_shot](/docs/assets/giantcfr/side_wall.jpg)
