--- a/_posts/2024-04-16-tmv.markdown
+++ b/_posts/2024-04-16-tmv.markdown
@@ -4,15 +4,15 @@ title:  "Bikepacking the TMV and Black Forest (France & Germany)"
 date:   2024-04-16 15:24:22 +0100
 categories: trips
 ---
-Translated from an old forum post in Dutch using ChatGPT3.5
-
-Original post (Dutch): https://www.beyondgaming.be/threads/fietsen-in-het-buitenland.290/post-288248
+Translated from an old forum post in Dutch.
 
 
-Alright, I've just completed my second "really big" bikepacking trip, so it's time to jot down a detailed blog post here! Hopefully, some of you will enjoy reading it or find inspiration! It's a bit of a wall of text/thought dump without much structure, so sorry if it sometimes seems a bit disjointed!
+
+
+Alright, I've just completed my second "really big" bikepacking trip, so it's time to write down a detailed blog post here! Hopefully, some of you will enjoy reading it or find inspiration! It's a bit of a wall of text/thought dump without much structure, so sorry if it sometimes seems a bit disjointed!
 
 # The Plan
-With two friends, we had been planning for a long time to do a big bikepacking tour this summer. Initially, we were interested in Scotland, but due to corona, etc., we ended up opting for an alternative in France/Germany. Based on a route (https://ridewithgps.com/routes/31547255) connecting the Vosges with the Black Forest, we planned to cycle from Karlsruhe to Offenburg in 12 days. The first part of the route largely follows the TMV (https://bikepacking.com/routes/bikepacking-france-traversee-du-massif-vosgien/). The second part follows the Black Forest back to Karlsruhe, but we shortened it to Offenburg. Both parts were almost entirely off-road, with a few "longer" stretches on asphalt in the Black Forest.
+With two friends, we had been planning for a long time to do a big bikepacking tour this summer. Initially, we were interested in Scotland, but due to corona, etc., we ended up opting for an alternative in France/Germany. Based on [a route ](https://ridewithgps.com/routes/31547255) connecting the Vosges with the Black Forest, we planned to cycle from Karlsruhe to Offenburg in 12 days. The first part of the route largely follows [the TMV ](https://bikepacking.com/routes/bikepacking-france-traversee-du-massif-vosgien/). The second part follows the Black Forest back to Karlsruhe, but we shortened it to Offenburg. Both parts were almost entirely off-road, with a few "longer" stretches on asphalt in the Black Forest.
 Statistics:
 892 km
 22480 meters of elevation gain
@@ -20,7 +20,7 @@ Statistics:
 ![route_plan](https://i.imgur.com/TFByFmg.png)
 
 # The Gear
-I'm actually not familiar at all with mountain biking and off-road riding. I don't own an MTB myself and only cycle on the road. Everything was a bit last minute, but fortunately, I could use my dad's MTB (Cube Acid, Deore XT, hydraulic disc brakes, Schwalbe tires) and equipped it with bikepacking bags from Topeak (some of which I borrowed from a friend). Additionally, I mounted two water bottles on the fork (with duct tape and straps) and one with some bike tools, a pocket knife, etc., on the bottom of the frame. My gear in the bags was rather barebones: clothing, tent, sleeping bag, mat, camping stove, cookware, electronics, etc. Standard camping gear.
+I'm actually not familiar at all with mountain biking and off-road riding. I don't own a MTB myself and only cycle on the road. Everything was a bit last minute, but fortunately, I could use my dad's MTB (Cube Acid, Deore XT, hydraulic disc brakes, Schwalbe tires) and equipped it with bikepacking bags from Topeak (some of which I borrowed from a friend). Additionally, I mounted two water bottles on the fork (with duct tape and straps) and one with some bike tools, a pocket knife, etc., on the bottom of the frame. My gear in the bags was rather barebones: clothing, tent, sleeping bag, mat, camping stove, cookware, electronics, etc. Standard camping gear.
 
 ![bike](https://i.imgur.com/jE4X2Im.png)
 
@@ -30,13 +30,13 @@ Early in the morning, the alarm goes off at 5 am to catch the train to Brussels 
 ![day0](https://i.imgur.com/SStt7EN.png)
 
 # Day 1: 72km, 661 meters of elevation gain
-With good spirits, we set off on our adventure in Karlsruhe. The day before, we ate and drank well and stayed in the local youth hostel. The plan was for a fairly relaxed ride with few elevation gains as a warm-up to the Vosges. We expected a quick ride, but a long stretch of highly technical singletrack put a damper on that. Especially with all our gear and my limited MTB experience, it was a serious challenge with lots of unclipping, cursing, and thinking, "What on earth have I gotten myself into?" The weather was changeable, but the ground was extremely wet/moist. Eventually, we stopped and slept in an improvised tipi on the edge of a fort where we could also store the bikes dry.
+With good spirits, we set off on our adventure in Karlsruhe. The day before, we ate and drank well and stayed in the local youth hostel. The plan was for a fairly relaxed ride with few elevation gain as a warm-up to the Vosges. We expected a quick ride, but a long stretch of highly technical singletrack put a damper on that. Especially with all our gear and my limited MTB experience, it was a serious challenge with lots of unclipping, cursing, and thinking, "What on earth have I gotten myself into?" The weather was changeable and the ground was extremely wet/moist. Eventually, we stopped and slept in an improvised tipi on the edge of a fort where we could also store the bikes dry.
 
 ![day1](https://i.imgur.com/HU35PvE.jpg)
 
 
 # Day 2: 93km, 1885 meters of elevation gain
-Enter the Vosges, and thus, the more serious climbing. What an incredibly tough day this was! Drizzle, showers, lots of wind, terrible terrain, and many sections that were impossible to ride, forcing us to dismount and push. We suffered a lot, and to be honest, I hadn't felt so low in spirits in a long time, thinking about facing another 10 days like this... After a long slog, we finally slept in a small F1 hotel. Especially my feet were a sight to behold; it wasn't very smart to not break in my new MTB shoes, the downside of planning last minute.
+Enter the Vosges, and thus, the more serious climbing. What an incredibly tough day this was! Drizzle, showers, lots of wind, terrible terrain, and many sections that were impossible to ride, forcing us to dismount and push. We suffered a lot, and to be honest, I hadn't felt so low in spirits in a long time, thinking about facing another 10 days like this... After a long slog, we finally slept in a small F1 hotel. Especially my feet were a horrible sight to behold; it wasn't very smart to not break in my new MTB shoes, the downside of planning last minute.
 
 ![day2](https://i.imgur.com/JniG5GT.jpg)
 
@@ -49,42 +49,42 @@ A well-deserved "recovery" day after the hell of day 2. The sun made its first a
 
 
 # Day 4: 72km, 1916 meters of elevation gain
-Another tough day with a few monstrous climbs! The TMV showed no mercy, and uphill was a struggle or even pushing was the only option. Fortunately, we were also rewarded with beautiful scenery, a café at noon, and camping in the vineyards in the evening. The sun did its job, and the weather from now on was truly fantastic!
+Another tough day with a few monstrous climbs! The TMV showed no mercy, and rising uphill was a struggle where pushing was often the only option. Fortunately, we were also rewarded with beautiful scenery, a café at noon, and camping in the vineyards in the evening. The sun did its job, and the weather  was truly fantastic!
 
 
 ![day4](https://i.imgur.com/lVRwfuM.jpg)
 
 
 #  Day 5: 69km, 1969 meters of elevation gain
-The pattern continues: climbing, climbing, and more climbing under a blazing sun. The elevation gains are starting to add up, but morale is still high! Towards the end of the day, fatigue starts to set in, and when we have to push the bikes uphill for another 1 km to a rundown campsite, we realize that it could still be tough. No store in sight, so we go straight to sleep after a meager dinner and with only one baguette as a reserve for breakfast...
+The pattern continues: climbing, climbing, and more climbing, luckily under the sun. The elevation gain starts to add up, but morale is still high! Towards the end of the day, fatigue starts to set in, and when we have to push the bikes uphill for another 1 km to a rundown campsite, we realize that it could still be tough. No store in sight, so we go straight to sleep after a meager dinner and with only one baguette as a reserve for breakfast...
 
 
 ![day5](https://i.imgur.com/frNAoSg.jpg)
 
 
 # Day 6: 72 km, 2133 meters of elevation gain
-After a dismal breakfast, we're immediately put to work on this monster stage. The Col du Grand Ballon (off-road) in sight... In the morning, everyone is exhausted, climbing is more difficult than ever, and all the strength in my arms seems to have disappeared. Turn off your brain and swaying upwards. Fortunately, the afternoon brings relief when we finally pass a bakery, which to our great joy also served pasta. After a feast, we tackle the Grand Ballon with renewed strength! Until we realize that we would also have to cover a section completely on foot to reach the "real" summit. Dragging the bike and everything uphill along part of the GR5 hiking trail... Fortunately, then exhausted downhill to a cozy campsite with hot food and cold beer!
+After a dismal breakfast, we're immediately put to work on this monster stage. The Col du Grand Ballon (off-road) in sight... In the morning, everyone is exhausted, climbing is more difficult than ever, and all the strength in my legs, arms and the rest of my body seems to have disappeared. I turned off my brain and swayed upwards. Fortunately, the afternoon brings relief when we finally pass a bakery, which to our great joy also served pasta. After a feast, we tackle the Grand Ballon with renewed strength! Until we realize that we would also have to cover a section completely on foot to reach the "real" summit. Dragging the bike and everything uphill along a part of the GR5 hiking trail... Fortunately, after that we could ride downhill to a cozy campsite with hot food and cold beer!
 
 
 ![day6](https://i.imgur.com/t0IjNID.jpg)
 
 
 # Day 7: 55km, 876 meters of elevation gain
-Phew, finally a quieter day! We reach the end of the Vosges and head towards the Rhine valley. The elevation gains finally drop below 1000 per day, and we're not sorry about that. We end the day at a campsite in Mulhouse, finally a city! We splash in the pool, have beers on the terrace, and have a delicious dinner at the Lebanese restaurant. Enjoyment!
+Phew, finally an easier day! We reach the end of the Vosges and head towards the Rhine valley. The elevation gain finally drops below 1000 per day, and we're not feeling bad about that. We end the day at a campsite in Mulhouse, finally a city! We splash in the pool, have beers on the terrace, and have a delicious dinner at the Lebanese restaurant. Enjoyment!
 
 
 ![day7](https://i.imgur.com/xMGyxLA.jpg)
 
 
 # Day 8: 74 km, 1209 meters of elevation gain
-A transitional ride through the Rhine valley towards the Black Forest. A bit more asphalt than off-road for a change, so we can pick up the pace. Good for morale! Because we all still feel fresh and it was too early to stop, we decide to tackle the first climb of the Black Forest, but what a monster it was! Insanely steep and what a terrible surface. At the top, however, we are greeted by another great campsite with a friendly host!
+A transit ride through the Rhine valley towards the Black Forest. A bit more asphalt than off-road for a change, so we can pick up the pace. Good for morale! Because we all still felt fresh and it was too early to stop, we decide to tackle the first climb of the Black Forest, but what a monster it was! Insanely steep and what a terrible surface. At the top, however, we are greeted by another great campsite with a friendly host!
 
 
 ![day8](https://i.imgur.com/q41W8xN.jpg)
 
 
 # Day 9: 73km, 1765 meters of elevation gain
-For the first time, "real" mechanical trouble strikes. Before this, only a few flat tires, but today my chain gives up and snaps in two. After struggling with a missing link, we have to head to a bike shop (stupidly forgot that there was a chain tool hidden in my multitool...) 20 km from where my chain broke. Fortunately, we were just at the top, and the village lay in a valley on the route. With a bit of pushing and wheel sucking from my two travel companions, we got back on track smoothly. A new chain on an old cassette is not ideal, but I'll have to make do...
+For the first time, "real" mechanical trouble strikes. Before this, only a few flat tires, but today my chain gives up and snaps in two. After struggling with a missing link, we have to head to a bike shop (stupidly forgot that there was a chain breaker tool hidden in my multitool...) 20 km from where my chain broke. Fortunately, we were just at the top, and the village lay in a valley on the route. With a bit of pushing and wheel sucking from my two travel companions, we got back on track smoothly. A new chain on an old cassette is not ideal, but I'll have to make do...
 
 
 ![day9](https://i.imgur.com/yEkxuQY.jpg)
@@ -98,7 +98,7 @@ The routine is well established, get up, pack up tent and gear, breakfast, and c
 
 
 # Day 11: 79km, 1967 meters of elevation gain
-The end is in sight, but that doesn't necessarily make it easier! Another serious day of toil to keep the last day feasible. The hearty meal doesn't agree with me, and I spend the day cycling around feeling unwell with cramps & diarrhea... The rain stays away, though, keeping morale high. Nevertheless, we decide to end our camping streak and sleep in a bed again. At a Vietnamese hotel (nowhere else for three apparently), we get a cozy room and a delicious meal!
+The end is in sight, but that doesn't necessarily make it easier! Another serious day of toil to keep the last day feasible. The hearty meal from the imbiss doesn't work well for me, and I spend the day cycling around feeling unwell with cramps & diarrhea... The rain stays away, though, keeping morale high. Nevertheless, we decide to end our camping streak and sleep in a bed again. At a Vietnamese hotel we get a cozy room and a delicious meal!
 
 
 ![day11](https://i.imgur.com/udpW1vV.png)
